feat: create base DOM structure

--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>Virtual Keyboard</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+      <script defer src="./js/main.js"></script>
   </head>
   <body>
-    <script src="./js/main.js"></script>
+
+  
+   
   </body>
 </html>
+
