--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-      <script defer src="./js/main.js"></script>
+      <script defer src="./js/layout.js"></script>
   </head>
   <body>
-
-  
-   
   </body>
 </html>
 
