fix: adjust keyboard layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-      <script defer src="./js/layout.js"></script>
+      <script defer type="module" src="./js/layout.js"></script>
   </head>
   <body>
   </body>
