--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 </head>
-<body>
+    <body id="root">
     </body>
-
 </html>
